--- a/GitHub Trial.html
+++ b/GitHub Trial.html
@@ -29,7 +29,7 @@
         <section>
           <h3>Nepal</h3>
           <p>
-            Peaks so high, eagles fly, Valleys green, dreams lie. Land of grace,
+            Just testing so see if editing actually works or not! Peaks so high, eagles fly, Valleys green, dreams lie. Land of grace,
             skies so blue, Nepal, my home, so true. Everest's shadow, bold,
             grand, Beacon bright, blessed land. Temples rise, spirits high,
             Culture rich, touches sky. Streets of tales, Kathmandu, Lumbini’s
